# python-manilaclient

./: .git-blame-ignore-revs  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .testr.conf  .zuul.yaml  AUTHORS  CONTRIBUTING.rst  ChangeLog  HACKING  README.md  README.rst  bindep.txt  lower-constraints.txt  openstack-common.conf  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.py  setuptools_git-1.0-py2.6.egg  test-requirements.txt  tox.ini
.tox/pep8/: .tox-config1
.tox/pep8/local/: bin  include  lib  log
.tox/py26/: .tox-config1
.tox/py27/: .tox-config1
.tox/py27/local/: bin  include  lib  log
cinderclient/: shell.py
cinderclient/v1/: client.py  share_snapshots.py
cinderclient/v2/: shell.py
contrib/ci/: post_test_hook.sh  pre_test_hook.sh
doc/: Makefile  requirements.txt
doc/source/: api.rst  conf.py  index.rst  shell.rst
doc/source/cli/: decoder.rst  osc_plugin_cli.rst
doc/source/contributor/: adding_release_notes.rst  contributing.rst  functional-tests.rst  index.rst
doc/source/user/: api.rst  shell.rst
etc/manilaclient/: README.manilaclient.conf
etc/oslo-config-generator/: manilaclient.conf
manilaclient/: __init__.py  api_versions.py  base.py  client.py  config.py  exceptions.py  extension.py  httpclient.py  service_catalog.py  shell.py  utils.py
manilaclient/common/: _i18n.py  cliutils.py  constants.py  httpclient.py
manilaclient/common/apiclient/: auth.py  base.py  client.py  exceptions.py  fake_client.py  utils.py
manilaclient/openstack/common/: _i18n.py  cliutils.py  gettextutils.py  importutils.py  jsonutils.py  setup.py  strutils.py  version.py
manilaclient/osc/: plugin.py  utils.py
manilaclient/osc/v2/: availability_zones.py  messages.py  qos_types.py  quotas.py  resource_locks.py  security_services.py  (+23 more)
manilaclient/v1/: __init__.py  client.py  consistency_group_snapshots.py  consistency_groups.py  limits.py  quota_classes.py  quotas.py  scheduler_stats.py  security_services.py  services.py  share_instances.py  share_networks.py  share_servers.py  share_snapshots.py  share_type_access.py  share_types.py  shares.py  shell.py  volume_snapshots.py  volume_types.py  volumes.py
manilaclient/v2/: __init__.py  availability_zones.py  client.py  consistency_group_snapshots.py  consistency_groups.py  limits.py  messages.py  qos_types.py  quota_classes.py  quotas.py  resource_locks.py  scheduler_stats.py  security_services.py  services.py  share_access_rules.py  share_backups.py  share_export_locations.py  share_group_snapshots.py  share_group_type_access.py  share_group_types.py  share_groups.py  share_instance_export_locations.py  share_instances.py  share_network_subnets.py  share_networks.py  share_replica_export_locations.py  share_replicas.py  share_servers.py  share_snapshot_export_locations.py  share_snapshot_instance_export_locations.py  share_snapshot_instances.py  share_snapshots.py  share_transfers.py  share_type_access.py  share_types.py  shares.py  shell.py  volumes.py
playbooks/python-manilaclient-functional/: run.yaml
releasenotes/notes/: Bug-1990013-fix-share-grou-from-snapshot-create-fa3629cf1417ba20.yaml  add-access-visibility-and-deletion-locks-69978f052e25334c.yaml  add-count-info-in-share-21a6b36c0f4c87b2.yaml  add-count-info-in-snapshot-c9600adad648a486.yaml  add-dash-dash-help-subcomand-ad4226454aa07bc6.yaml  add-defaultadsite-to-security-service-33fd0a5d1b865b11.yaml  add-encryption-key-ref-option-for-share-create-api-035aec5b31d7c37b.yaml  add-ensure-shares-command-6cd854408de1979b.yaml  add-ensuring-filter-for-services-eedbead009d3505f.yaml  add-export-location-filter-4cf3114doe40k598.yaml  add-export-variable-for-api-endpoint-override-c00ea54e1670cb90.yaml  add-ipv6-access-type-4dko90r1a9a1e0b8.yaml  add-like-filter-591572762357ef4b.yaml  add-message-list-and-delete-41b3323edd63d894.yaml  add-metadata-for-share-access-rule-11a6b36c0f4c87c2.yaml  add-per-share-gigabytes-quotas-40bc404bd3cbdd89.yaml  add-query-params-pools-list-api-12cf1s14ddf40kdd.yaml  add-quiesce-wait-time-for-replica-promote-30d9fa66afc854f2.yaml  add-quota-per-share-type-support-3b2708ea232e69bc.yaml  add-scheduler-hints-to-share-create-70d429cb0aaf8f11.yaml  add-scheduler-hints-to-share-replica-create-d152a3934e5ad3a7.yaml  add-share-group-quotas-support-b6563cec58209a1d.yaml  add-share-group-support-a3166f6ca4d06a81.yaml  add-share-network-sec-service-add-update-to-in-use-networks-ec7a60d07ebceaf4.yaml  add-share-replica-metadata-e6c1c2e00295d2dd.yaml  add-share-replicas-and-replica-gigabytes-quotas-909436c2b2420f2c.yaml  add-snapshot-instances-admin-api-3cf3114doe40k598.yaml  add-snapshot-metadata-49b0288bf2f12bf0.yaml  add-subnet-metadata-82426986431b0179.yaml  add-support-for-qos-type-and-specs-2b5ce0002721cdb3.yaml  add-support-of-api-endpoint-override-e36e75246d39a367.yaml  add-support-to-check-quota-usage-scfdg14dod40k71a.yaml  add-wait-flag-share-server-unmanage-819dd42abc2a4d2b.yaml  add_export_location_metadata-e023dccf4c28bd76.yaml  add_support_multiple_subnet_per_az-46145c3e90e097be.yaml  bp-allow-locking-shares-against-deletion-89e51e27368cda46.yaml  bp-export-locations-replica-az-commands-03aa32c08f59c42d.yaml  bp-integrate-os-profiler-4818066dc2fbf7b7.yaml  bp-manage-with-mount-point-name-69be3a8aa4fcaa1f.yaml  bp-ocata-migration-improvements-f63c5d233856fbee.yaml  (+106 more)
releasenotes/source/: conf.py  index.rst
roles/populate-manilaclient-config/: README.rst
setuptools_git-1.0-py2.7.egg/EGG-INFO/: PKG-INFO
tests/: fakes.py  test_base.py  test_client.py  test_http.py  test_service_catalog.py  test_shell.py  test_utils.py  utils.py
tests/v1/: fake_clients.py  fakes.py  test_auth.py  test_quota_classes.py  test_quotas.py  test_security_services.py  test_services.py  test_share_networks.py  test_share_servers.py  test_share_snapshots.py  test_shares.py  test_shell.py  test_types.py
tests/v2/: fakes.py  test_auth.py  test_shell.py  test_types.py
tools/: cinder.bash_completion  install_venv.py  manila.bash_completion  test-requires
zuul.d/: project.yaml  python-manilaclient-jobs.yaml
(+189 files in other folders)
