[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "python-manilaclient"
description = "Client library for OpenStack Shared File System Storage"
authors = [
    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "Apache-2.0"}
dynamic = ["version", "dependencies"]
requires-python = ">=3.10"
classifiers = [
  "Environment :: OpenStack",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://docs.openstack.org/python-manilaclient/"
Repository = "https://opendev.org/openstack/python-manilaclient/"

[project.scripts]
manila = "manilaclient.shell:main"

[project.entry-points."oslo.config.opts"]
"manilaclient.config" = "manilaclient.config:list_opts"

[project.entry-points."openstack.cli.extension"]
share = "manilaclient.osc.plugin"

[project.entry-points."openstack.share.v2"]
share_list = "manilaclient.osc.v2.share:ListShare"
share_create = "manilaclient.osc.v2.share:CreateShare"
share_delete = " manilaclient.osc.v2.share:DeleteShare"
share_show = "manilaclient.osc.v2.share:ShowShare"
share_set = "manilaclient.osc.v2.share:SetShare"
share_unset = "manilaclient.osc.v2.share:UnsetShare"
share_resize = "manilaclient.osc.v2.share:ResizeShare"
share_adopt = "manilaclient.osc.v2.share:AdoptShare"
share_abandon = "manilaclient.osc.v2.share:AbandonShare"
share_migration_start = "manilaclient.osc.v2.share:ShareMigrationStart"
share_migration_cancel = "manilaclient.osc.v2.share:ShareMigrationCancel"
share_migration_complete = "manilaclient.osc.v2.share:ShareMigrationComplete"
share_migration_show = "manilaclient.osc.v2.share:ShareMigrationShow"
share_export_location_show = "manilaclient.osc.v2.share:ShareExportLocationShow"
share_export_location_list = "manilaclient.osc.v2.share:ShareExportLocationList"
share_export_location_set = "manilaclient.osc.v2.share:ShareExportLocationSet"
share_export_location_unset = "manilaclient.osc.v2.share:ShareExportLocationUnset"
share_properties_show = "manilaclient.osc.v2.share:ShowShareProperties"
share_restore = "manilaclient.osc.v2.share:RestoreShare"
share_revert = "manilaclient.osc.v2.share:RevertShare"
share_access_create = "manilaclient.osc.v2.share_access_rules:ShareAccessAllow"
share_access_delete = "manilaclient.osc.v2.share_access_rules:ShareAccessDeny"
share_access_list = "manilaclient.osc.v2.share_access_rules:ListShareAccess"
share_access_show = "manilaclient.osc.v2.share_access_rules:ShowShareAccess"
share_access_set = "manilaclient.osc.v2.share_access_rules:SetShareAccess"
share_access_unset = "manilaclient.osc.v2.share_access_rules:UnsetShareAccess"
share_backup_create = "manilaclient.osc.v2.share_backups:CreateShareBackup"
share_backup_delete = "manilaclient.osc.v2.share_backups:DeleteShareBackup"
share_backup_list = "manilaclient.osc.v2.share_backups:ListShareBackup"
share_backup_show = "manilaclient.osc.v2.share_backups:ShowShareBackup"
share_backup_restore = "manilaclient.osc.v2.share_backups:RestoreShareBackup"
share_backup_set = "manilaclient.osc.v2.share_backups:SetShareBackup"
share_backup_unset = "manilaclient.osc.v2.share_backups:UnsetShareBackup"
share_type_create = "manilaclient.osc.v2.share_types:CreateShareType"
share_type_delete = "manilaclient.osc.v2.share_types:DeleteShareType"
share_type_set = "manilaclient.osc.v2.share_types:SetShareType"
share_type_unset = "manilaclient.osc.v2.share_types:UnsetShareType"
share_type_list = "manilaclient.osc.v2.share_types:ListShareType"
share_type_show = "manilaclient.osc.v2.share_types:ShowShareType"
share_type_access_create = "manilaclient.osc.v2.share_type_access:ShareTypeAccessAllow"
share_type_access_list = "manilaclient.osc.v2.share_type_access:ListShareTypeAccess"
share_type_access_delete = "manilaclient.osc.v2.share_type_access:ShareTypeAccessDeny"
share_quota_set = "manilaclient.osc.v2.quotas:QuotaSet"
share_quota_show = "manilaclient.osc.v2.quotas:QuotaShow"
share_quota_delete = "manilaclient.osc.v2.quotas:QuotaDelete"
share_snapshot_create = "manilaclient.osc.v2.share_snapshots:CreateShareSnapshot"
share_snapshot_delete = "manilaclient.osc.v2.share_snapshots:DeleteShareSnapshot"
share_snapshot_show = "manilaclient.osc.v2.share_snapshots:ShowShareSnapshot"
share_snapshot_set = "manilaclient.osc.v2.share_snapshots:SetShareSnapshot"
share_snapshot_unset = "manilaclient.osc.v2.share_snapshots:UnsetShareSnapshot"
share_snapshot_list = "manilaclient.osc.v2.share_snapshots:ListShareSnapshot"
share_snapshot_adopt = "manilaclient.osc.v2.share_snapshots:AdoptShareSnapshot"
share_snapshot_abandon = "manilaclient.osc.v2.share_snapshots:AbandonShareSnapshot"
share_snapshot_access_create = "manilaclient.osc.v2.share_snapshots:ShareSnapshotAccessAllow"
share_snapshot_access_delete = "manilaclient.osc.v2.share_snapshots:ShareSnapshotAccessDeny"
share_snapshot_access_list = "manilaclient.osc.v2.share_snapshots:ShareSnapshotAccessList"
share_snapshot_export_location_list = "manilaclient.osc.v2.share_snapshots:ShareSnapshotListExportLocation"
share_snapshot_export_location_show = "manilaclient.osc.v2.share_snapshots:ShareSnapshotShowExportLocation"
share_snapshot_instance_list = "manilaclient.osc.v2.share_snapshot_instances:ListShareSnapshotInstance"
share_snapshot_instance_show = "manilaclient.osc.v2.share_snapshot_instances:ShowShareSnapshotInstance"
share_snapshot_instance_set = "manilaclient.osc.v2.share_snapshot_instances:SetShareSnapshotInstance"
share_snapshot_instance_export_location_list = "manilaclient.osc.v2.share_snapshot_instance_export_locations:ShareSnapshotInstanceExportLocationList"
share_snapshot_instance_export_location_show = "manilaclient.osc.v2.share_snapshot_instance_export_locations:ShareSnapshotInstanceExportLocationShow"
share_message_delete = "manilaclient.osc.v2.messages:DeleteMessage"
share_message_list = "manilaclient.osc.v2.messages:ListMessage"
share_message_show = "manilaclient.osc.v2.messages:ShowMessage"
share_replica_create = "manilaclient.osc.v2.share_replicas:CreateShareReplica"
share_replica_delete = "manilaclient.osc.v2.share_replicas:DeleteShareReplica"
share_replica_list = "manilaclient.osc.v2.share_replicas:ListShareReplica"
share_replica_show = "manilaclient.osc.v2.share_replicas:ShowShareReplica"
share_replica_set = "manilaclient.osc.v2.share_replicas:SetShareReplica"
share_replica_promote = "manilaclient.osc.v2.share_replicas:PromoteShareReplica"
share_replica_resync = "manilaclient.osc.v2.share_replicas:ResyncShareReplica"
share_replica_export_location_list = "manilaclient.osc.v2.share_replica_export_locations:ShareReplicaListExportLocation"
share_replica_export_location_show = "manilaclient.osc.v2.share_replica_export_locations:ShareReplicaShowExportLocation"
share_availability_zone_list = "manilaclient.osc.v2.availability_zones:ShareAvailabilityZoneList"
share_service_set = "manilaclient.osc.v2.services:SetShareService"
share_service_list = "manilaclient.osc.v2.services:ListShareService"
share_service_ensure_shares = "manilaclient.osc.v2.services:EnsureShareService"
share_security_service_create = "manilaclient.osc.v2.security_services:CreateShareSecurityService"
share_security_service_delete = "manilaclient.osc.v2.security_services:DeleteShareSecurityService"
share_security_service_show = "manilaclient.osc.v2.security_services:ShowShareSecurityService"
share_security_service_set = "manilaclient.osc.v2.security_services:SetShareSecurityService"
share_security_service_unset = "manilaclient.osc.v2.security_services:UnsetShareSecurityService"
share_security_service_list = "manilaclient.osc.v2.security_services:ListShareSecurityService"
share_pool_list = "manilaclient.osc.v2.share_pools:ListSharePools"
share_instance_delete = "manilaclient.osc.v2.share_instances:ShareInstanceDelete"
share_instance_list = "manilaclient.osc.v2.share_instances:ShareInstanceList"
share_instance_set = "manilaclient.osc.v2.share_instances:ShareInstanceSet"
share_instance_show = "manilaclient.osc.v2.share_instances:ShareInstanceShow"
share_instance_export_location_show = "manilaclient.osc.v2.share_instance_export_locations:ShareInstanceShowExportLocation"
share_instance_export_location_list = "manilaclient.osc.v2.share_instance_export_locations:ShareInstanceListExportLocation"
share_limits_show = "manilaclient.osc.v2.share_limits:ShareLimitsShow"
share_network_list = "manilaclient.osc.v2.share_networks:ListShareNetwork"
share_network_show = "manilaclient.osc.v2.share_networks:ShowShareNetwork"
share_network_create = "manilaclient.osc.v2.share_networks:CreateShareNetwork"
share_network_delete = "manilaclient.osc.v2.share_networks:DeleteShareNetwork"
share_network_set = "manilaclient.osc.v2.share_networks:SetShareNetwork"
share_network_unset = "manilaclient.osc.v2.share_networks:UnsetShareNetwork"
share_network_subnet_create = "manilaclient.osc.v2.share_network_subnets:CreateShareNetworkSubnet"
share_network_subnet_delete = "manilaclient.osc.v2.share_network_subnets:DeleteShareNetworkSubnet"
share_network_subnet_show = "manilaclient.osc.v2.share_network_subnets:ShowShareNetworkSubnet"
share_network_subnet_set = "manilaclient.osc.v2.share_network_subnets:SetShareNetworkSubnet"
share_network_subnet_unset = "manilaclient.osc.v2.share_network_subnets:UnsetShareNetworkSubnet"
share_group_create = "manilaclient.osc.v2.share_groups:CreateShareGroup"
share_group_delete = "manilaclient.osc.v2.share_groups:DeleteShareGroup"
share_group_list = "manilaclient.osc.v2.share_groups:ListShareGroup"
share_group_show = "manilaclient.osc.v2.share_groups:ShowShareGroup"
share_group_set = "manilaclient.osc.v2.share_groups:SetShareGroup"
share_group_unset = "manilaclient.osc.v2.share_groups:UnsetShareGroup"
share_group_type_create = "manilaclient.osc.v2.share_group_types:CreateShareGroupType"
share_group_type_delete = "manilaclient.osc.v2.share_group_types:DeleteShareGroupType"
share_group_type_list = "manilaclient.osc.v2.share_group_types:ListShareGroupType"
share_group_type_show = "manilaclient.osc.v2.share_group_types:ShowShareGroupType"
share_group_type_set = "manilaclient.osc.v2.share_group_types:SetShareGroupType"
share_group_type_unset = "manilaclient.osc.v2.share_group_types:UnsetShareGroupType"
share_group_type_access_create = "manilaclient.osc.v2.share_group_type_access:ShareGroupTypeAccessAllow"
share_group_type_access_list = "manilaclient.osc.v2.share_group_type_access:ListShareGroupTypeAccess"
share_group_type_access_delete = "manilaclient.osc.v2.share_group_type_access:ShareGroupTypeAccessDeny"
share_group_snapshot_create = "manilaclient.osc.v2.share_group_snapshots:CreateShareGroupSnapshot"
share_group_snapshot_delete = "manilaclient.osc.v2.share_group_snapshots:DeleteShareGroupSnapshot"
share_group_snapshot_show= "manilaclient.osc.v2.share_group_snapshots:ShowShareGroupSnapshot"
share_group_snapshot_list = "manilaclient.osc.v2.share_group_snapshots:ListShareGroupSnapshot"
share_group_snapshot_set = "manilaclient.osc.v2.share_group_snapshots:SetShareGroupSnapshot"
share_group_snapshot_unset = "manilaclient.osc.v2.share_group_snapshots:UnsetShareGroupSnapshot"
share_group_snapshot_members_list = "manilaclient.osc.v2.share_group_snapshots:ListShareGroupSnapshotMembers"
share_server_delete = "manilaclient.osc.v2.share_servers:DeleteShareServer"
share_server_show = "manilaclient.osc.v2.share_servers:ShowShareServer"
share_server_list = "manilaclient.osc.v2.share_servers:ListShareServer"
share_server_adopt = "manilaclient.osc.v2.share_servers:AdoptShareServer"
share_server_abandon = "manilaclient.osc.v2.share_servers:AbandonShareServer"
share_server_set = "manilaclient.osc.v2.share_servers:SetShareServer"
share_server_migration_cancel = "manilaclient.osc.v2.share_servers:ShareServerMigrationCancel"
share_server_migration_complete = "manilaclient.osc.v2.share_servers:ShareServerMigrationComplete"
share_server_migration_show = "manilaclient.osc.v2.share_servers:ShareServerMigrationShow"
share_server_migration_start = "manilaclient.osc.v2.share_servers:ShareServerMigrationStart"
share_transfer_create = "manilaclient.osc.v2.share_transfers:CreateShareTransfer"
share_transfer_delete = "manilaclient.osc.v2.share_transfers:DeleteShareTransfer"
share_transfer_list = "manilaclient.osc.v2.share_transfers:ListShareTransfer"
share_transfer_show = "manilaclient.osc.v2.share_transfers:ShowShareTransfer"
share_transfer_accept = "manilaclient.osc.v2.share_transfers:AcceptShareTransfer"
share_lock_create = "manilaclient.osc.v2.resource_locks:CreateResourceLock"
share_lock_list = "manilaclient.osc.v2.resource_locks:ListResourceLock"
share_lock_show = "manilaclient.osc.v2.resource_locks:ShowResourceLock"
share_lock_set = " manilaclient.osc.v2.resource_locks:SetResourceLock"
share_lock_unset = "manilaclient.osc.v2.resource_locks:UnsetResourceLock"
share_lock_delete = "manilaclient.osc.v2.resource_locks:DeleteResourceLock"

[tool.setuptools]
packages = [
    "manilaclient"
]

[tool.coverage.run]
omit = [
    "manilaclient/tests/*",
]
branch = true

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "preserve"
docstring-code-format = true

[tool.ruff.lint]
select = ["E4", "E5", "E7", "E9", "F", "S", "UP"]

[tool.ruff.lint.per-file-ignores]
"manilaclient/tests/*" = ["S"]
