[metadata]
name = python-manilaclient
summary = Client library for OpenStack Manila API.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/python-manilaclient/latest/
python-requires = >=3.6
classifier =
   Development Status :: 5 - Production/Stable
   Environment :: Console
   Environment :: OpenStack
   Intended Audience :: Developers
   Intended Audience :: Information Technology
   License :: OSI Approved :: Apache Software License
   Operating System :: OS Independent
   Programming Language :: Python
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8

[files]
packages =
    manilaclient

[entry_points]
console_scripts =
    manila = manilaclient.shell:main
oslo.config.opts =
    manilaclient.config = manilaclient.config:list_opts

openstack.cli.extension =
    share = manilaclient.osc.plugin

openstack.share.v2 =
    share_list = manilaclient.osc.v2.share:ListShare
    share_create = manilaclient.osc.v2.share:CreateShare
    share_delete =  manilaclient.osc.v2.share:DeleteShare
    share_show = manilaclient.osc.v2.share:ShowShare
    share_set = manilaclient.osc.v2.share:SetShare
    share_unset = manilaclient.osc.v2.share:UnsetShare
    share_resize = manilaclient.osc.v2.share:ResizeShare
    share_access_create = manilaclient.osc.v2.share_access_rules:ShareAccessAllow
    share_access_delete = manilaclient.osc.v2.share_access_rules:ShareAccessDeny
    share_access_list = manilaclient.osc.v2.share_access_rules:ListShareAccess
    share_access_show = manilaclient.osc.v2.share_access_rules:ShowShareAccess
    share_access_set = manilaclient.osc.v2.share_access_rules:SetShareAccess
    share_access_unset = manilaclient.osc.v2.share_access_rules:UnsetShareAccess
    share_type_create = manilaclient.osc.v2.share_types:CreateShareType
    share_type_delete = manilaclient.osc.v2.share_types:DeleteShareType
    share_type_set = manilaclient.osc.v2.share_types:SetShareType
    share_type_unset = manilaclient.osc.v2.share_types:UnsetShareType
    share_type_list = manilaclient.osc.v2.share_types:ListShareType
    share_type_show = manilaclient.osc.v2.share_types:ShowShareType
    share_type_access_create = manilaclient.osc.v2.share_type_access:ShareTypeAccessAllow
    share_type_access_list = manilaclient.osc.v2.share_type_access:ListShareTypeAccess
    share_type_access_delete = manilaclient.osc.v2.share_type_access:ShareTypeAccessDeny
    share_quota_set = manilaclient.osc.v2.quotas:QuotaSet
    share_quota_show = manilaclient.osc.v2.quotas:QuotaShow
    share_quota_delete = manilaclient.osc.v2.quotas:QuotaDelete
    share_snapshot_create = manilaclient.osc.v2.share_snapshots:CreateShareSnapshot
    share_snapshot_delete = manilaclient.osc.v2.share_snapshots:DeleteShareSnapshot
    share_snapshot_show = manilaclient.osc.v2.share_snapshots:ShowShareSnapshot
    share_snapshot_set = manilaclient.osc.v2.share_snapshots:SetShareSnapshot
    share_snapshot_unset = manilaclient.osc.v2.share_snapshots:UnsetShareSnapshot
    share_snapshot_list = manilaclient.osc.v2.share_snapshots:ListShareSnapshot

[coverage:run]
omit = manilaclient/tests/*
branch = true
